force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Calculates the age of the member from their birthdate.</description>
    <formula>IF( NOT( ISBLANK( Birthdate ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate ),
     YEAR (Today()) - YEAR ( Birthdate ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the age of the member from their birthdate.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>