force-app/main/default/objects/Contact/fields/Age_Concession__c.field-meta.xml
<CustomField>
    <fullName>Age_Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age Concession</label>
    <type>Checkbox</type>
</CustomField>