force-app/main/default/objects/Contact/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <formula>IF(
NOT(ISNULL(Birthdate)),  YEAR(Birthdate)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>