force-app/main/default/objects/Contact/fields/CCC_Data__c.field-meta.xml
<CustomField>
    <fullName>CCC_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCC Data</label>
    <type>Checkbox</type>
</CustomField>