force-app/main/default/objects/Contact/fields/Club_Officer__c.field-meta.xml
<CustomField>
    <fullName>Club_Officer__c</fullName>
    <formula>IMAGE( 
IF(  Officer_Count__c &gt; 0, 
&quot;/resource/0000000000000/red_star&quot;, 
&quot;/resource/0000000000000/trans_circle&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club Officer</label>
    <type>Text</type>
</CustomField>