force-app/main/default/objects/Contact/fields/Date_Archived__c.field-meta.xml
<CustomField>
    <fullName>Date_Archived__c</fullName>
    <label>Date Archived</label>
    <type>Date</type>
</CustomField>