force-app/main/default/objects/Contact/fields/Date_Ended__c.field-meta.xml
<CustomField>
    <fullName>Date_Ended__c</fullName>
    <label>Date Ended</label>
    <type>Date</type>
</CustomField>