force-app/main/default/objects/Contact/fields/Date_Joined_Aligned_with_Membership__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined_Aligned_with_Membership__c</fullName>
    <formula>Date_Joined__c =  Account.Date_Joined__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Joined Aligned with Membership</label>
    <type>Checkbox</type>
</CustomField>