force-app/main/default/objects/Contact/fields/District_Association__c.field-meta.xml
<CustomField>
    <fullName>District_Association__c</fullName>
    <formula>Account.District_Association__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Association</label>
    <type>Text</type>
</CustomField>