force-app/main/default/objects/Contact/fields/Hybrid_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Membership_Number__c</fullName>
    <formula>Account.Hybrid_Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hybrid Membership Number</label>
    <type>Text</type>
</CustomField>