force-app/main/default/objects/Contact/fields/Membership_Search__c.field-meta.xml
<CustomField>
    <fullName>Membership_Search__c</fullName>
    <label>Membership Search</label>
    <length>8</length>
    <type>Text</type>
</CustomField>