force-app/main/default/objects/Contact/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <formula>TEXT ( Account.Membership_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Status</label>
    <type>Text</type>
</CustomField>