force-app/main/default/objects/Contact/fields/Membership_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type_Name__c</fullName>
    <description>This formula is need to get information to be sent to a third party tool using outbound message</description>
    <formula>Account.Membership_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Type (Name)</label>
    <type>Text</type>
</CustomField>