force-app/main/default/objects/Contact/fields/morethan60__c.field-meta.xml
<CustomField>
    <fullName>morethan60__c</fullName>
    <formula>IF((TODAY() - Birthdate) &gt;= 60,true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>morethan60</label>
    <type>Checkbox</type>
</CustomField>