force-app/main/default/objects/Contact/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <formula>ROUND((TODAY() - Birthdate ) / 365, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>