force-app/main/default/objects/Contact/fields/Officer__c.field-meta.xml
<CustomField>
    <fullName>Officer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for demo purposes</description>
    <label>Officer</label>
    <type>Checkbox</type>
</CustomField>