force-app/main/default/objects/Contact/fields/Officer_Count__c.field-meta.xml
<CustomField>
    <fullName>Officer_Count__c</fullName>
    <label>Officer Count</label>
    <summaryFilterItems>
        <field>Voluntary_Office__c.End_date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Voluntary_Office__c.Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>