force-app/main/default/objects/Contact/fields/Online_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Online_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Account Created</label>
    <type>Checkbox</type>
</CustomField>