force-app/main/default/objects/Contact/fields/Over_18_Child__c.field-meta.xml
<CustomField>
    <fullName>Over_18_Child__c</fullName>
    <formula>IMAGE ( 
IF( RecordType.DeveloperName = &quot;Child&quot;, 

IF( Age__c &gt; 17, 
&quot;/resource/0000000000000/eighteen&quot;, 
&quot;/resource/0000000000000/trans_circle&quot;), 
&quot;/resource/0000000000000/trans_circle&quot; 
), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18+ Child</label>
    <type>Text</type>
</CustomField>