force-app/main/default/objects/Contact/fields/Post_nominal_Letters__c.field-meta.xml
<CustomField>
    <fullName>Post_nominal_Letters__c</fullName>
    <inlineHelpText>Awards or Honours, for example OBE or MBE</inlineHelpText>
    <label>Post-nominal Letters</label>
    <length>20</length>
    <type>Text</type>
</CustomField>