force-app/main/default/objects/Contact/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>