force-app/main/default/objects/Contact/fields/pushToRMS__c.field-meta.xml
<CustomField>
    <fullName>pushToRMS__c</fullName>
    <description>This field will help to trigger a flow that triggers an outbound message to RMS</description>
    <label>pushToRMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>