force-app/main/default/objects/Contact/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>This formula is need to get information to be sent to a third party tool using outbound message</description>
    <formula>TEXT(Account.Renewal_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Text</type>
</CustomField>