force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(  ISBLANK(Date_Ended__c) = TRUE, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>