force-app/main/default/objects/Contact/fields/Status_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Status_Expiry__c</fullName>
    <formula>Account.Status_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Expiry</label>
    <type>Date</type>
</CustomField>