force-app/main/default/objects/Contact/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>Account.Status_Indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>