force-app/main/default/objects/Contact/fields/Website_Password__c.field-meta.xml
<CustomField>
    <fullName>Website_Password__c</fullName>
    <label>Website Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>