force-app/main/default/objects/Contact/fields/Website_Password_Status__c.field-meta.xml
<CustomField>
    <fullName>Website_Password_Status__c</fullName>
    <label>Website Password Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>