force-app/main/default/objects/Contact/recordTypes/Access.recordType-meta.xml
<RecordType>
    <fullName>Access</fullName>
    <active>true</active>
    <description>Access Members should only be added by a Membership Administrator</description>
    <label>Access</label>
</RecordType>