force-app/main/default/objects/Contact/recordTypes/Associate.recordType-meta.xml
<RecordType>
    <fullName>Associate</fullName>
    <active>true</active>
    <description>Associate Members should be added using the [Change Membership] button</description>
    <label>Associate</label>
</RecordType>