force-app/main/default/objects/Contact/recordTypes/Child.recordType-meta.xml
<RecordType>
    <fullName>Child</fullName>
    <active>true</active>
    <description>Add a new Child to the Membership</description>
    <label>Child</label>
</RecordType>