force-app/main/default/objects/Contact/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <description>New Lead Members cannot be added to the Membership</description>
    <label>Lead</label>
</RecordType>