force-app/main/default/objects/Contact/recordTypes/Secondary.recordType-meta.xml
<RecordType>
    <fullName>Secondary</fullName>
    <active>true</active>
    <description>Add a new Secondary Member to the Membership</description>
    <label>Secondary</label>
</RecordType>