force-app/main/default/objects/Contact/listViews/Access_Members.listView-meta.xml
<ListView>
    <fullName>Access_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Tenure2__c</columns>
    <columns>Member_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Access</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Access Members</label>
</ListView>