force-app/main/default/objects/Contact/listViews/AllContactsnoage.listView-meta.xml
<ListView>
    <fullName>AllContactsnoage</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Age__c</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>Date_Joined__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead</value>
    </filters>
    <label>All Membersnoage</label>
</ListView>