force-app/main/default/objects/Contact/listViews/Associate_Members_all.listView-meta.xml
<ListView>
    <fullName>Associate_Members_all</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>Tenure2__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Associate</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Associate Members (all)</label>
</ListView>