force-app/main/default/objects/Contact/listViews/Associate_Members_inactive.listView-meta.xml
<ListView>
    <fullName>Associate_Members_inactive</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Member_Type__c</columns>
    <columns>Date_Ended__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <columns>Status_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Associate</value>
    </filters>
    <filters>
        <field>Membership_Status__c</field>
        <operation>contains</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>inactive</value>
    </filters>
    <label>Associate Members (Inactive)</label>
</ListView>