force-app/main/default/objects/Contact/listViews/BirthdaysThisMonth.listView-meta.xml
<ListView>
    <fullName>BirthdaysThisMonth</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Date_Ended__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Age__c</field>
        <operation>greaterThan</operation>
        <value>17</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Birthdays This Month</label>
</ListView>