force-app/main/default/objects/Contact/listViews/Child_Members_over_18.listView-meta.xml
<ListView>
    <fullName>Child_Members_over_18</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Over_18_Child__c</columns>
    <columns>Age__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>Date_Ended__c</columns>
    <columns>Account.Hybrid_Membership_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Child</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>18</value>
    </filters>
    <label>Child Members over 18</label>
</ListView>