force-app/main/default/objects/Contact/listViews/Copy_of_Members_age_65.listView-meta.xml
<ListView>
    <fullName>Copy_of_Members_age_65</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Age__c</columns>
    <columns>Age_Concession__c</columns>
    <columns>Account.Status_Indicator__c</columns>
    <columns>Account.Application_Source__c</columns>
    <columns>Account.Membership_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age_Concession__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead,Contact.Secondary</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Members - No ACR</label>
</ListView>