force-app/main/default/objects/Contact/listViews/Disband_DA_email_list.listView-meta.xml
<ListView>
    <fullName>Disband_DA_email_list</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>District_Association__c</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Account.Postcode_Part_1__c</columns>
    <columns>Account.Opted_In__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notContain</operation>
        <value>Example</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>District_Association__c</field>
        <operation>equals</operation>
        <value>Somerset D A</value>
    </filters>
    <label>Disband DA email list</label>
</ListView>