force-app/main/default/objects/Contact/listViews/InactiveContacts.listView-meta.xml
<ListView>
    <fullName>InactiveContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Date_Ended__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Ended__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>inactive</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Secondary</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Inactive Members</label>
</ListView>