force-app/main/default/objects/Contact/listViews/Lead_Members.listView-meta.xml
<ListView>
    <fullName>Lead_Members</fullName>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>Age__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <columns>Tenure2__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead</value>
    </filters>
    <filters>
        <field>Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Lead Members (Active)</label>
</ListView>