force-app/main/default/objects/Contact/listViews/Longest_serving_members.listView-meta.xml
<ListView>
    <fullName>Longest_serving_members</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Date_Joined__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <columns>Tenure2__c</columns>
    <columns>Age__c</columns>
    <columns>Age_Concession__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Account.Membership_Type__c</columns>
    <columns>Status_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead,Contact.Secondary</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Tenure2__c</field>
        <operation>greaterThan</operation>
        <value>50</value>
    </filters>
    <label>Longest serving members</label>
</ListView>