force-app/main/default/objects/Contact/listViews/Members_age_65.listView-meta.xml
<ListView>
    <fullName>Members_age_65</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Age__c</columns>
    <columns>Age_Concession__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Account.Status_Indicator__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>65</value>
    </filters>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Age_Concession__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead,Contact.Secondary</value>
    </filters>
    <label>Members age 65+ no ACR</label>
</ListView>