force-app/main/default/objects/Contact/listViews/Members_no_D_O_B.listView-meta.xml
<ListView>
    <fullName>Members_no_D_O_B</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Date_Joined__c</columns>
    <columns>Account.Renewal_Date__c</columns>
    <columns>Age_Concession__c</columns>
    <columns>Account.Status_Indicator__c</columns>
    <columns>Tenure2__c</columns>
    <columns>Account.Membership_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Membership_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lead</value>
    </filters>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
    </filters>
    <label>Members no D.O.B</label>
</ListView>